--- a/index.html
+++ b/index.html
@@ -7,30 +7,29 @@
 </head>
 
 <body background="images/wallpaper.jpg">
-  <center>
-  <div id="kop" position="center">
+  <center> <!-- Deze Center tags FF vervangen met iets in CSS, momenteel wordt alle inhoudt op de pagina gecentreerd -->
+  <div id="main" position="center">
     <header>
-      <center>
-        <img id="forum_banner" src="">
-      <center>
+      <img id="forum_banner" src="">
     </header>
-    <nav>
-			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/home.html'">Home</a>
-			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/news.html'">News</a>
+    <nav>  <!-- Dit zijn de knoppen voor het navigatie lint  -->
 			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
 			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
-			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">User</a>
-			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/about.html'">About</a>
+			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
+			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
+			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
+			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
     </nav>
-    <br>
+    <br> <!-- Het zou mooi zijn als deze <br> tags kunnen worden vervangen met een border in CSS -->
       <div>
         <div id="important">
-          belangrijk/populair
+          belangrijk placeholder
         </div>
       </div>
-    <br>
+    <br> <!-- <br> tag #2 -->
     <div>
       <div id="populair">
+        populair placeholder
       </div>
     </div>
   </div>
