--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Placeholder</title>
 </head>
 
-<body background="images/wallpaper.jpg">
+<body background="images/wallpaper1.jpg">
   <center> <!-- Deze Center tags FF vervangen met iets in CSS, momenteel wordt alle inhoudt op de pagina gecentreerd -->
   <div id="main" position="center">
     <header>
@@ -32,6 +32,11 @@
         populair placeholder
       </div>
     </div>
+    <br>
+    <br>
+    <footer>
+
+    </footer>
   </div>
 </center>
 </body>
