--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Placeholder</title>
 </head>
 
-<body background="images/wallpaper1.jpg"> <!-- Deze Center tags FF vervangen met iets in CSS, momenteel wordt alle inhoudt op de pagina gecentreerd -->
+<body background="images/wallpaper1.jpg"> 
   <div id="main" position="center">
     <header>
       <img id="forum_banner" src="">
