--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
 			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
     </nav>
-    <br> <!-- Het zou mooi zijn als deze <br> tags kunnen worden vervangen met een border in CSS -->
+    <br> <!-- Het zou mooi zijn als deze <br> tags kunnen worden vervangen met een border in CSS. Hoeft niet, mag. -->
       <div>
         <div id="important">
           belangrijk placeholder
