De grote opruiming
Heb alles een beetje ge-ordered. Stylesheets hebben nu hun eigen map.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/style_buttons.css">
   <title>Placeholder</title>
 </head>
 
@@ -31,10 +32,10 @@
         populair placeholder
       </div>
     </div>
-    <br>
+    <br> <!-- <br> tag #3 -->
     <br>
     <footer>
-
+      Footer Place holder
     </footer>
   </div>
 </body>
