--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <br> <!-- <br> tag #2 -->
     <div>
       <div id="populair">
-        populair placeholder
+        Placeholder populair
       </div>
     </div>
     <br> <!-- <br> tag #3 -->
