--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body background="images/wallpaper1.jpg">
   <div id="main" position="center">
     <header>
-      <img id="forum_banner" src="">
+      <img id="forum_banner" src="">  <!-- Hier de link voor de forumbanner invullen -->
     </header>
     <nav>  <!-- Dit zijn de knoppen voor het navigatie lint  -->
       <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
