--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
-<html>
+<html lang="nl">
 
 <head>
   <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/style_buttons.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/style_important.css">
+  <meta charset="utf-8">
   <title>Placeholder</title>
 </head>
 
-<body background="images/wallpaper1.jpg">
-  <div id="main" position="center">
+<body background="images/wallpaper.jpg">
+  <div id="main">
     <header>
       <img id="forum_banner" src="">  <!-- Hier de link voor de forumbanner invullen -->
     </header>
@@ -23,7 +25,32 @@
     <br> <!-- Het zou mooi zijn als deze <br> tags kunnen worden vervangen met een border in CSS. Hoeft niet, mag. -->
       <div>
         <div id="important">
-          belangrijk placeholder
+          <div id="container_1">
+            <div id="important_Content_1">
+              Placeholder 1
+            </div>
+            <div id="important_Content_2">
+              Placeholder 2
+            </div>
+          </div>
+
+          <div id="container_2">
+            <div id="important_Content_3">
+              Placeholder 3
+            </div>
+            <div id="important_Content_4">
+              Placeholder 4
+            </div>
+          </div>
+
+          <div id="container_3">
+            <div id="important_Content_5">
+              Placeholder 5
+            </div>
+            <div id="important_Content_6">
+              Placeholder 6
+            </div>
+          </div>
         </div>
       </div>
     <br> <!-- <br> tag #2 -->
