--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <br> <!-- Het zou mooi zijn als deze <br> tags kunnen worden vervangen met een border in CSS. Hoeft niet, mag. -->
       <div>
         <div id="important">
-          <div id="container_1">
+          <div id="container_1"> <!-- Deze containers zorgen er voor dat we die <div>'s zo mooi onder elkaar kunnen zetten, elke container bevat 2 <div>'s die naast elkaar staan -->
             <div id="important_Content_1">
               Placeholder 1
             </div>
