--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       <img id="forum_banner" src="">  <!-- Hier de link voor de forumbanner invullen -->
     </header>
     <nav>  <!-- Dit zijn de knoppen voor het navigatie lint  -->
-      <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
-      <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
-      <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
-	    <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
-      <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
-      <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
+      <a class="nav_button" href="pages/katten.html">Kittens!</a>
+      <a class="nav_button" href="pages/katten.html">Placeholder</a>
+      <a class="nav_button" href="pages/katten.html">Placeholder</a>
+	    <a class="nav_button" href="pages/katten.html">Placeholder</a>
+      <a class="nav_button" href="pages/katten.html">Placeholder</a>
+      <a class="nav_button" href="pages/katten.html">Placeholder</a>
     </nav>
     <br> <!-- Het zou mooi zijn als deze <br> tags kunnen worden vervangen met een border in CSS. Hoeft niet, mag. -->
       <div>
@@ -56,7 +56,31 @@
     <br> <!-- <br> tag #2 -->
     <div>
       <div id="populair">
-        Populair placeholder
+        <div id="container_4"> <!-- Deze containers zorgen er voor dat we die <div>'s zo mooi onder elkaar kunnen zetten, elke container bevat 2 <div>'s die naast elkaar staan -->
+          <div id="populair_Content_1">
+            Placeholder 1
+          </div>
+          <div id="populair_Content_2">
+            Placeholder 2
+          </div>
+        </div>
+
+        <div id="container_5">
+          <div id="populair_Content_3">
+            Placeholder 3
+          </div>
+          <div id="populair_Content_4">
+            Placeholder 4
+          </div>
+        </div>
+
+        <div id="container_6">
+          <div id="populair_Content_5">
+            Placeholder 5
+          </div>
+          <div id="populair_Content_6">
+            Placeholder 6
+          </div>
       </div>
     </div>
     <br> <!-- <br> tag #3 & #4 -->
