--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/kittens.html'">Kitten!</a>
 			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
 			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
-			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">User</a>
-			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/about.html'">About</a>
+			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
+			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
     </nav>
 
     <iframe id="main" frameBorder="0" src="pages/main.html">
