--- a/pages/kittens.html
+++ b/pages/kittens.html
@@ -6,7 +6,13 @@
   <title>Kittens!</title>
 </head>
 
-<body background="../images/kittens.jpg">
+<style>
+	body{
+	background-size: cover;
+	}
+</style>
+
+<body background="../images/kittens.jpg" >
 
 </body>
 
