--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body background="images/wallpaper.jpg">
   <div id="hoofd">
     <header>
-      <img id="forum_banner" src="">  <!-- Hier de link voor de forumbanner invullen -->
+      <img id="forum_banner" src="">  <!-- Hier de link ( pages/NAAM.html ) voor de forumbanner invullen -->
     </header>
     <nav>  <!-- Dit zijn de knoppen voor het navigatie lint  -->
       <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/main.html'">Home</a>
-			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/kittens.html'">Kitten!</a>
+			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/kittens.html'">Kittens!</a>
 			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
 			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
 			<a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
