--- a/pages/main.html
+++ b/pages/main.html
@@ -11,30 +11,30 @@
 
   <body>
     <div>
-      <div id="important">
-        <div id="container_1"> <!-- Deze containers zorgen er voor dat we die <div>'s zo mooi onder elkaar kunnen zetten, elke container bevat 2 <div>'s die naast elkaar staan -->
-          <div id="important_Content_1">
+      <div class="important">
+        <div class="container_1"> <!-- Deze containers zorgen er voor dat we die <div>'s zo mooi onder elkaar kunnen zetten, elke container bevat 2 <div>'s die naast elkaar staan -->
+          <div class="important_Content_1">
             Placeholder 1
           </div>
-          <div id="important_Content_2">
+          <div class="important_Content_2">
             Placeholder 2
           </div>
         </div>
 
-        <div id="container_2">
-          <div id="important_Content_3">
+        <div class="container_2">
+          <div class="important_Content_3">
             Placeholder 3
           </div>
-          <div id="important_Content_4">
+          <div class="important_Content_4">
             Placeholder 4
           </div>
         </div>
 
-        <div id="container_3">
-          <div id="important_Content_5">
+        <div class="container_3">
+          <div class="important_Content_5">
             Placeholder 5
           </div>
-          <div id="important_Content_6">
+          <div class="important_Content_6">
             Placeholder 6
           </div>
         </div>
@@ -42,30 +42,30 @@
     </div>
   <br> <!-- <br> tag #2 -->
     <div>
-      <div id="populair">
-        <div id="container_4"> <!-- Deze containers zorgen er voor dat we die <div>'s zo mooi onder elkaar kunnen zetten, elke container bevat 2 <div>'s die naast elkaar staan -->
-          <div id="populair_Content_1">
+      <div class="populair">
+        <div class="container_4"> <!-- Deze containers zorgen er voor dat we die <div>'s zo mooi onder elkaar kunnen zetten, elke container bevat 2 <div>'s die naast elkaar staan -->
+          <div class="populair_Content_1">
             Placeholder 1
           </div>
-          <div id="populair_Content_2">
+          <div class="populair_Content_2">
             Placeholder 2
           </div>
         </div>
 
-        <div id="container_5">
-          <div id="populair_Content_3">
+        <div class="container_5">
+          <div class="populair_Content_3">
             Placeholder 3
           </div>
-          <div id="populair_Content_4">
+          <div class="populair_Content_4">
             Placeholder 4
           </div>
         </div>
 
-        <div id="container_6">
-          <div id="populair_Content_5">
+        <div class="container_6">
+          <div class="populair_Content_5">
             Placeholder 5
           </div>
-          <div id="populair_Content_6">
+          <div class="populair_Content_6">
             Placeholder 6
           </div>
         </div>
