--- a/pages/kittens.html
+++ b/pages/kittens.html
@@ -3,17 +3,34 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Kittens!</title>
+    <link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/post.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/style_important.css">
+    <title>Forum Page</title>
   </head>
 
-  <style>
-  	body {
-  	background-size: cover;
-  	}
-  </style>
+  <body>
+    <div class="forum_irl">
+      <div class="Content_1">
+          Content Placeholder
+      </div>
+      <div class="Content_1">
+          Content Placeholder
+      </div>
+      <div class="Content_1">
+          Content Placeholder
+      </div>
+      <div class="Content_1">
+          Content Placeholder
+      </div>
+      <div class="Content_1">
+          Content Placeholder
+      </div>
+      <div class="Content_1">
+          Content Placeholder
+      </div>
+    </div>
 
-  <body background="../images/kittens.jpg" >
-	   
   </body>
 
 </html>
