Added Placeholder page

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <nav>  <!-- Dit zijn de knoppen voor het navigatie lint  -->
         <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/main.html'">Home</a>
         <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/kittens.html'">Kittens!</a>
-        <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
-        <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
-        <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
-        <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/placeholder.html'">Placeholder</a>
+        <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/nonMain/placeHolder.html'">Placeholder</a>
+        <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/nonMain/placeHolder.html'">Placeholder</a>
+        <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/nonMain/placeHolder.html'">Placeholder</a>
+        <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/nonMain/placeHolder.html'">Placeholder</a>
       </nav>
 
       <iframe id="main" frameBorder="0" src="pages/main.html">
