half werkend forum

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav>  <!-- Dit zijn de knoppen voor het navigatie lint  -->
         <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/main.html'">Home</a>
         <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/kittens.html'">Kittens!</a>
-        <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/nonMain/placeHolder.html'">Placeholder</a>
+        <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/form.php'">Forum</a>
         <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/nonMain/placeHolder.html'">Placeholder</a>
         <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/nonMain/placeHolder.html'">Placeholder</a>
         <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/nonMain/placeHolder.html'">Placeholder</a>
