--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/main.html'">Home</a>
         <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/kittens.html'">TEST</a>
         <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/form.php'">Forum</a>
-        <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/nonMain/placeHolder.html'">Placeholder</a>
-        <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/nonMain/placeHolder.html'">Placeholder</a>
+        <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/register.php'">Registeren</a>
+        <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/login.php'">Login</a>
         <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/nonMain/placeHolder.html'">Placeholder</a>
       </nav>
 
