--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         <img id="forum_banner" src="">  <!-- Hier de link ( pages/NAAM.html ) voor de forumbanner invullen -->
       </header>
       <nav>  <!-- Dit zijn de knoppen voor het navigatie lint  -->
-        <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/main.html'">Home</a>
-        <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/kittens.html'">TEST</a>
-        <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/form.php'">Forum</a>
-        <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/register.php'">Registeren</a>
-        <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/login.php'">Login</a>
-        <a class="nav_button" onclick="document.querySelector('#main').src = 'pages/nonMain/placeHolder.html'">Placeholder</a>
+        <a class="nav_button" style="text-decoration:none" onclick="document.querySelector('#main').src = 'pages/main.html'">Home</a>
+        <a class="nav_button" style="text-decoration:none" onclick="document.querySelector('#main').src = 'pages/kittens.html'">TEST</a>
+        <a class="nav_button" style="text-decoration:none" onclick="document.querySelector('#main').src = 'pages/form.php'">Forum</a>
+        <a class="nav_button" style="text-decoration:none" onclick="document.querySelector('#main').src = 'pages/register.php'">Registeren</a>
+        <a class="nav_button" style="text-decoration:none" onclick="document.querySelector('#main').src = 'pages/login.php'">Login</a>
+        <a class="nav_button" style="text-decoration:none" onclick="document.querySelector('#main').src = 'pages/nonMain/placeHolder.html'">Placeholder</a>
       </nav>
 
       <iframe class="iframe" id="main" width="100%" frameBorder="0" scrolling="no" src="pages/nonMain/placeHolder.html">
