Changed language to English
+ general layout fixes

--- a/html/nav.html
+++ b/html/nav.html
@@ -10,7 +10,7 @@
 </head>
 
 
-<body background="../images/web/wallpaper.jpg">
+<body background="../images/web/wallpaper.png">
 <div id="hoofd">
     <header>
         <img id="forum_banner" src="">  <!-- Hier de link voor de forumbanner invullen -->
@@ -18,7 +18,7 @@
     <nav>  <!-- Dit zijn de knoppen voor het navigatie lint  -->
         <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=home">Home</a>
         <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=topic">Topic</a>
-        <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=registreren">Registreren</a>
+        <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=registreren">Register</a>
         <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=inloggen">Login</a>
     </nav>
 </div>
