--- a/html/navlog.html
+++ b/html/navlog.html
@@ -10,14 +10,14 @@
 </head>
 
 
-<body background="../images/web/wallpaper.jpg">
+<body background="../images/web/wallpaper.png">
 <div id="hoofd">
     <header>
         <img id="forum_banner" src="">  <!-- Hier de link voor de forumbanner invullen -->
     </header>
     <nav>  <!-- Dit zijn de knoppen voor het navigatie lint  -->
         <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=home">Home</a>
-        <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=topic">Topic</a>
-        <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=profiel">Profiel</a>
+        <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=topic">Topics</a>
+        <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=profiel">Profile</a>
     </nav>
 </div>
