--- a/html/navlog.html
+++ b/html/navlog.html
@@ -16,8 +16,8 @@
         <img id="forum_banner" src="">  <!-- Hier de link voor de forumbanner invullen -->
     </header>
     <nav>  <!-- Dit zijn de knoppen voor het navigatie lint  -->
-        <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=home">Home</a>
-        <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=topic">Topics</a>
-        <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=profiel">Profile</a>
+        <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=home"><b>Home</b></a>
+        <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=topic"><b>Topics</b></a>
+        <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=profiel"><b>Profile</b></a>
     </nav>
 </div>
