--- a/html/nav.html
+++ b/html/nav.html
@@ -16,9 +16,9 @@
         <img id="forum_banner" src="">  <!-- Hier de link voor de forumbanner invullen -->
     </header>
     <nav>  <!-- Dit zijn de knoppen voor het navigatie lint  -->
-        <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=home">Home</a>
-        <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=topic">Topic</a>
-        <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=registreren">Register</a>
-        <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=inloggen">Login</a>
+        <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=home"><b>Home</b></a>
+        <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=topic"><b>Topic</b></a>
+        <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=registreren"><b>Register</b></a>
+        <a class="nav_button" style="text-decoration:none" href="../php/index.php?pag=inloggen"><b>Login</b></a>
     </nav>
 </div>
